# talbe_processor_telegram_bot

./: README.md  main.py  processor.py  pyproject.toml
